--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -16,3 +16,19 @@ h2{
   left: 5%;
   max-width: 600px;
 }
+
+/* Seccion Servicios */
+
+.section-servicios{
+  margin-top: 80px;
+  padding: 0px 80px;
+}
+
+.img-servicios{
+  max-width: 500px;
+}
+
+.icon-servicios{
+  max-width: 50px;
+  max-height: 50px;
+}
