--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,23 +1,21 @@
 .main {
   background-color: #FFFFFF;
   width: 400px;
-  height: 400px;
+  height: 380px;
   margin: 10em auto;
   border-radius: 1.5em;
   box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
 }
 
-.sign {
+.logo-login{
   padding-top: 40px;
-  color: #8C55AA;
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: bold;
-  font-size: 23px;
+  margin: 0px auto;
+  max-width: 250px;
 }
 
 .un {
 width: 76%;
-color: rgb(38, 50, 56);
+color: var(--text-color);
 font-weight: 700;
 font-size: 14px;
 letter-spacing: 1px;
@@ -32,7 +30,6 @@ margin-bottom: 50px;
 margin-left: 46px;
 text-align: center;
 margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
 }
 
 form.form1 {
@@ -40,8 +37,8 @@ form.form1 {
 }
 
 .pass {
-      width: 76%;
-color: rgb(38, 50, 56);
+width: 76%;
+color: var(--text-color);
 font-weight: 700;
 font-size: 14px;
 letter-spacing: 1px;
@@ -52,41 +49,43 @@ border-radius: 20px;
 outline: none;
 box-sizing: border-box;
 border: 2px solid rgba(0, 0, 0, 0.02);
-margin-bottom: 50px;
+margin-bottom: 40px ;
 margin-left: 46px;
 text-align: center;
-margin-bottom: 27px;
-font-family: 'Ubuntu', sans-serif;
 }
 
 
 .un:focus, .pass:focus {
   border: 2px solid rgba(0, 0, 0, 0.18) !important;
-  
 }
 
 .submit {
-cursor: pointer;
+  cursor: pointer;
   border-radius: 5em;
-  color: #fff;
-  background: linear-gradient(to right, #9C27B0, #E040FB);
+  background: linear-gradient(to right, #a77d46, #ad680e);
   border: 0;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 10px;
   padding-top: 10px;
-  font-family: 'Ubuntu', sans-serif;
   margin-left: 35%;
   font-size: 13px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
   text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
-  color: #E1BEE7;
+  color: white;
   text-decoration: none
+}
+
+.submit:hover{
+  color: white;
+  background: linear-gradient(to right, #aa6c1b, #ad6302);
 }
 
 @media (max-width: 600px) {
   .main {
-      border-radius: 0px;
+    border-radius: 1.5em;
+    margin: 10em auto;
+    max-width: 350px;
   }
   
 }
