--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,9 @@
 	--text-color: #404b6d;
 	--background-1: #e98e3d;
 	--background-2: #93c8c8;
+	--blue: #287bff;
+  --white: #fff;
+  --grey: #f5f5f5;
+  --black1: #222;
+  --black2: #999;
 }
