--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -8,6 +8,10 @@
   overflow: hidden;
   }
 
+  .pointerSidebar {
+    cursor: pointer;
+  }
+
   .navigation ul{
     position: absolute;
     top: 0;
