--- a/src/pages/dashboard/registroUser/registroUser.css
+++ b/src/pages/dashboard/registroUser/registroUser.css
@@ -1,101 +1,128 @@
-  /* Main */
-  .maindash{
-    position: absolute;
-    width: calc(100% - 250px);
-    left: 250px;
-    min-height: 100vh;
-    background: var(--white);
-    transition: 0.5s;
-  }
+/* Main */
+.maindash {
+  position: absolute;
+  width: calc(100% - 250px);
+  left: 250px;
+  min-height: 100vh;
+  background: var(--white);
+  transition: 0.5s;
+}
 
-  .topbar{
-    width: 100%;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-  }
+.topbar {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px;
+}
 
-  .iconPage{
- font-size: 35px;
-  }
-  .toggle{
-    position: relative;
-    top: 0;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2.5em;
-    cursor: pointer;
-    }
+.iconPage {
+  font-size: 35px;
+}
 
-     .user{
-      position: relative;
-      min-width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      overflow: hidden;
-      cursor: pointer;
-    }
+.toggle {
+  position: relative;
+  top: 0;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5em;
+  cursor: pointer;
+}
 
-    .user img{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+.user {
+  position: relative;
+  min-width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  cursor: pointer;
+}
 
-.cardBoxtwo{
+.user img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cardBoxtwo {
   position: relative;
   width: 100%;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 30px;
 }
 
-.cardBoxtwo .card{
+.cardBoxtwo .card {
   position: relative;
   background: var(--white);
   padding: 20px 30px;
   border-radius: 20px;
   display: flex;
-  box-shadow: 0 7px 25px rgba(0,0,0,0.08);
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   flex-direction: row;
   flex-direction: column;
 }
 
-.cardBoxtwo .card .numbers{
+.cardBoxtwo .card .numbers {
   position: relative;
   font-weight: 500;
   font-size: 2.5em;
   color: var(--blue);
 }
 
-.cardBoxtwo .card .cardName{
+.cardBoxtwo .card .cardName {
   color: var(--black2);
   font-size: 1.1em;
   margin-top: 5px;
 }
 
-.cardBoxtwo .card .iconBx{
+.cardBoxtwo .card .iconBx {
   font-size: 3.5em;
   color: var(--black2);
 }
 
-.cardBoxtwo .card:hover{
+.cardBoxtwo .card:hover {
   background: none;
 }
 
 
 .cardBoxtwo .card:hover .numbers,
 .cardBoxtwo .card:hover .cardName,
-.cardBoxtwo .card:hover .iconBx{
+.cardBoxtwo .card:hover .iconBx {
   color: var(--blue);
 }
 
+.horizontal-scroll {
+  overflow: hidden;
+  overflow-x: auto;
+  clear: both;
+  width: 100%;
+}
+
+@media (max-width: 700px) {
+  .maindash {
+    position: inherit;
+    width: 100%;
+  }
+
+  .cardBoxtwo {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .horizontal-scroll {
+    width: 300px !important;
+  }
+
+  .ImgLogoMobile {
+    margin-top: 0px;
+    width: 50% !important;
+  }
+}
